CMAKE_MINIMUM_REQUIRED(VERSION 3.7.2)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/../../../cmake_modules/)
INCLUDE( CaPTk_macros )

SET( PROJECT_NAME PerfusionAlignment )

CAPTK_ADD_PROJECT( ${PROJECT_NAME} 1.6.2 )

ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/../../cbica_toolkit/ cbica_toolkit ) # takes care of find_itk

CAPTK_INITIAL_SETUP()

INCLUDE_DIRECTORIES( ${CACHED_INCLUDE_DIRS} )

SET( APPLICATION_SOURCES 
  ${PROJECT_SOURCE_DIR}/src/PerfusionAlignment.cxx 
  ${CURRENT_APPLICATION_DEPENDS}
)

CAPTK_ADD_EXECUTABLE( ${PROJECT_NAME} ${APPLICATION_SOURCES} ${LIBNAME_CBICATK} )

ADD_DEPENDENCIES( ${PROJECT_NAME} ${LIBNAME_CBICATK} )
